plugins {
    id 'java-library'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

java {
    toolchain { languageVersion = JavaLanguageVersion.of(17) }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'

    // Selenide
    testImplementation 'com.codeborne:selenide:7.9.4'

    // Логи (опционально)
    testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.17'

    // Рандомные данные
    implementation 'com.github.javafaker:javafaker:1.0.2'
}

test {
    useJUnitPlatform()
}
